# chatbox_router

./: ._target  .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prod  PROXY_ANALYSIS.md  README.md  README_DOCKER.md  build-docker.sh  build-linux.sh  build-local.sh  build-x86_64-2.sh  build_to_main_server.sh  build_to_server.sh  debug_on_the_server.sh  debug_to_main_server.sh  docker-compose.prod.yml  run.sh  run_the_server.sh  server-deployment.md  setup-docker-secrets.md  setup-secrets.md
.config/: px copy.toml  px.toml
.github/workflows/: deploy.yml
src/: ai_handlers.rs  config.rs  handlers.rs  image_handlers.rs  key_management.rs  main.rs  middleware.rs  routes.rs  session_config.rs  tools.rs  user_handlers.rs
tcm/: fullchain.pem  privkey.pem
