[package]
name = "chatbox-router"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23", "macros"], default-features = false }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-cors = "0.7.0"
actix-rt = "2.5"
actix-web-lab = "0.22.0"
actix-files = "0.6"
actix-service = "2.0"
rustls = { version = "0.23.17", features = ["ring"] }
rustls-pemfile = "2.1.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls", "json","multipart"] }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.11.5"
aes-gcm = "0.10"
aes = "0.8.4"
hex = "0.4"
ring = "0.17.8"
fs2 = "0.4"
base64 = "0.22.1"
uuid = { version = "1.11.0", features = ["v4"] }
bcrypt = "0.16.0"
futures = "0.3"
tera = "1.20.0"
futures-util = "0.3"
derive_more = { version = "1.0", features = ["full"] }
rand = "0.8"
sha2 = "0.10"
redis = { version = "0.27.5", features = ["tokio-comp"], default-features = false }
chrono = "0.4"
regex = "1.11.1"
#keyring = { version = "3.6.1", features = ["linux-native-sync-persistent"] }
keyring = { version = "3.6.2", features = ["apple-native"] }
anyhow = "1.0.93"
block-modes = "0.9.1"
bytes = "1.8.0"
clap = { version = "4.5.32", features = ["derive"] }
clap_derive = "4.5.32"